fix: sidebar overflow

--- a/src/components/Dashboard/Sidebar/sidebar.module.scss
+++ b/src/components/Dashboard/Sidebar/sidebar.module.scss
@@ -1,6 +1,5 @@
 .sidebar {
   width: 100%;
-  min-width: 240px;
   height: 100%;
   padding: 30px;
   border-radius: 20px;
